%% Figure: Entity-Relationship diagram — core domain + connector framework
erDiagram
    STARTUPS ||--o{ CONNECTOR_CREDENTIALS : "has"
    STARTUPS ||--o{ CONNECTOR_DATA_GITHUB : "owns"
    STARTUPS ||--o{ CONNECTOR_DATA_SLACK : "owns"
    STARTUPS ||--o{ METRICS : "rolls up"
    STARTUPS ||--o{ KAI_INSIGHTS : "generates"
    STARTUPS ||--o{ STARTUP_DEPARTMENTS : "organised into"
    PROFILES ||--o{ CONNECTOR_DATA_GITHUB : "author_profile_id"
    PROFILES }o--|| USER_ROLES : "assigned"

    PROFILES {
        uuid id PK
        text full_name
        text role
        text department
        text github_username
        text notification_email
    }
    STARTUPS {
        uuid id PK
        text name
        text slug
    }
    CONNECTOR_CREDENTIALS {
        uuid id PK
        uuid startup_id FK
        text connector_type
        jsonb credentials
        boolean is_active
        timestamptz last_synced_at
    }
    CONNECTOR_DATA_GITHUB {
        uuid id PK
        uuid startup_id FK
        text record_type
        text external_id
        text repo_name
        text author_login
        uuid author_profile_id FK
        timestamptz created_at_source
        jsonb raw_payload
    }
    CONNECTOR_DATA_SLACK {
        uuid id PK
        uuid startup_id FK
        text channel_id
        text message_ts
        text user_id_source
        date message_date
    }
    METRICS {
        uuid id PK
        uuid startup_id FK
        text connector_type
        text metric_name
        numeric metric_value
        date period_start
        text granularity
    }
    KAI_INSIGHTS {
        uuid id PK
        uuid startup_id FK
        text insight_type
        text body
        text confidence
    }
    USER_ROLES {
        uuid user_id PK
        text role
    }
    STARTUP_DEPARTMENTS {
        uuid id PK
        uuid startup_id FK
        text department_key
        text status
    }
